--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,3 +19,5 @@ Globals.posblAtchFileSize=5242880
 Globals.addedOptions=false
 Globals.fileStorePath=\\\\192.168.20.5\\\uAC1C\uC778\uACF5\uC720\\99.\uAC1C\uC778\uD3F4\uB354\\\uC774\uC2B9\uC740\\sptfile
 Globals.thumbImgfileStorePath=\\\\192.168.20.5\\\uAC1C\uC778\uACF5\uC720\\99.\uAC1C\uC778\uD3F4\uB354\\\uC774\uC2B9\uC740\\sptfile\\itemThumbnail\\
+# application.properties ??? ? ??? ??? ??
+mybatis.configuration.map-underscore-to-camel-case=true
