--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -25,3 +25,5 @@ Globals.fileStorePath=/app/sptfiles
 Globals.thumbImgfileStorePath=/app/sptfiles/itemThumbnail/
 #-------------------------prod-------------------------
 
+# application.properties ??? ? ??? ??? ??
+mybatis.configuration.map-underscore-to-camel-case=true
