--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,10 @@ Globals.fileUpload.Extensions = .gif.jpg.jpeg.png.xls.xlsx.svg.json
 
 #\uC554\uD638\uD654\uC11C\uBE44\uC2A4 \uC54C\uACE0\uB9AC\uC998 \uD0A4
 Globals.crypto.algoritm = spatialt
-
+# application.properties ??? ? ??? ??? ??
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:egovframework/mapper/**/*.xml
+mybatis.type-aliases-package=egovframework.**.vo,biz.**.vo
 # \uC138\uC158 \uC124\uC815
 server.servlet.session.timeout=1800
 server.servlet.session.cookie.http-only=true
